--- a/plantation/index.html
+++ b/plantation/index.html
@@ -23,6 +23,10 @@
         <div class="leaflet-sidebar-tabs">
             <ul role="tablist">
                 <li><a href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace" role="tab"><i class="fa fa-home"></i></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/plantation" role="tab"><img src="../assets/sprout.png" alt=""></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/wildlife_monitoring" role="tab"><img src="../assets/paw.png" alt=""></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/ship_tracker" role="tab"><img src="../assets/ship.png" alt=""></a></li>
             </ul>
         </div>
 
