--- a/ship_tracker/index.html
+++ b/ship_tracker/index.html
@@ -23,12 +23,12 @@
         <div class="leaflet-sidebar-tabs">
             <ul role="tablist">
                 <li><a href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
-                <li><a href="/plantation" role="tab"><img src="../assets/sprout.png" alt=""></a></li>
-                <li><a href="/wildlife_monitoring" role="tab"><img src="../assets/paw.png" alt=""></a></li>
-                <li><a href="/ship_tracker" role="tab"><img src="../assets/ship.png" alt=""></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/plantation" role="tab"><img src="../assets/sprout.png" alt=""></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/wildlife_monitoring" role="tab"><img src="../assets/paw.png" alt=""></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/ship_tracker" role="tab"><img src="../assets/ship.png" alt=""></a></li>
             </ul>
             <ul role="tablist">
-                <li><a href="/" role="tab"><i class="fa fa-info"></i></a></li>
+                <li><a href="https://lighteagle.github.io/task-hyperspace/" role="tab"><i class="fa fa-info"></i></a></li>
             </ul>
         </div>
 
