update label info

--- a/ship_tracker/index.html
+++ b/ship_tracker/index.html
@@ -41,7 +41,7 @@
                 <br><hr>
                 <div>
                     <input type="checkbox" id="show-tooltips">
-                    <label for="show-tooltips"> Show ID</label>
+                    <label for="show-tooltips"> Show Info</label>
                 </div>
             </div>
         </div>
